Refactor toString methods and update GeneralTestingController endpoints